istio/podrocket/db-ss.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: podcastrs
spec:
  selector:
    app: podcastrs
  ports:
  - name: mongo-port
    port: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podcastrs
  serviceName: db
  template:
    metadata:
      labels:
        app: podcastrs
    spec:
      containers:
      - name: db
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: "/data/db"
          name: mongo-v
  volumeClaimTemplates:
  - metadata:
      name: mongo-v
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
