istio/podrocket/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: podcastrs
spec:
  selector:
    app: podcastrs
  ports:
  - name: mongo-port
    port: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podcastrs
  template:
    metadata:
      labels:
        app: podcastrs
    spec:
      containers:
        - name: db
          image: mongo
          ports:
          - containerPort: 27017
          volumeMounts:
          - mountPath: "/data"
            name: mongo-volume
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: podcastrs-mongo-pvc
