istio/podrocket/api-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: podrocket-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podrocket-istio
spec:
  hosts:
  - "*"
  gateways:
  - podrocket-gateway
  http:
  - route:
    - destination:
        host: podrocket
    corsPolicy:
      allowOrigin:
        - "*"
      allowMethods:
        - GET
      allowCredentials: true 
      allowHeaders:
        - "*"
