istio/podrocket/db-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: db
spec:
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: db
